--- a/Portfolio/Portfolio.css
+++ b/Portfolio/Portfolio.css
@@ -78,6 +78,31 @@ aside{
 
 
 }
+#myCarousel{
+  margin-bottom: 12px;
+}
+
+#myCarousel .f-carousel__slide {
+  text-align: center;
+  padding: 12px;
+  background: #eee;
+}
+.f-carousel {
+  --f-button-width: 38px;
+  --f-button-height: 38px;
+
+  --f-button-svg-width: 16px;
+  --f-button-svg-height: 16px;
+  --f-button-svg-stroke-width: 2.5;
+
+  --f-button-color: rgb(236, 233, 31);
+  --f-button-border-radius: 50%;
+  --f-button-shadow: 0 6px 12px -2px rgb(50 50 93 / 25%), 0 3px 7px -3px rgba(125, 20, 223, 0.3);
+
+  --f-button-bg: #09af32;
+  --f-button-hover-bg: #096118;
+  --f-button-active-bg: #310ead;
+}
 
 
 
